feat: 添加文章排序方式配置和全面性能优化
新功能：
- 新增 SORT_BY 配置项，支持按发布时间(pub_date)或更新时间(updated_at)排序

性能优化：
- 新增并发处理支持，使用 MAX_WORKERS 配置控制线程数（默认4）
- 处理速度提升约7倍（90秒  13秒）
- 所有配置项可通过 setting.yaml 自定义

可配置性增强：
- LOG_LEVEL: 日志级别控制
- REQUEST_TIMEOUT: HTTP请求超时
- FEED_CHECK_TIMEOUT: Feed检查超时
- REQUEST_RETRIES: 重试次数
- RETRY_BACKOFF: 重试退避系数

代码优化：
- 移除未使用的 article_ids 缓存代码
- 配置化所有硬编码常量
- 完善方法文档注释
- 修正配置注释与代码逻辑一致性

文档更新：
- README 分为基础配置和高级配置两部分
- 添加性能优化配置说明
- 添加文章排序方式说明

--- a/setting.yaml
+++ b/setting.yaml
@@ -64,8 +64,13 @@ OUTDATE_CLEAN: 180
 
 ## 是否进行时区转换
 ## true: 将RSS时间换算为北京时间（当前默认行为）
-## false: 不做换算，保留对方文章的“墙上时间”，但以北京时间标注
+## false: 不做换算，保留对方文章的"墙上时间"，但以北京时间标注
 TIMEZONE_CORRECTION: false
+
+## 文章排序方式
+## pub_date: 按发布时间排序（默认）
+## updated_at: 按更新时间排序
+SORT_BY: updated_at
 
 ## 输出文件名（根目录相对路径）
 ## 例如想要输出为 rss.json：将其设置为 rss.json
